pom-parser/src/snapshots/bind_fn-2.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn () = {};\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [],
                            },
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Block(
                        [],
                    ),
                    span: Span {
                        start: 11,
                        end: 13,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
