pom-parser/src/snapshots/block_stmt-2.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"{55 + 47;}\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(2),
                    ),
                    span: Span {
                        start: 1,
                        end: 9,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                        ],
                    ),
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(0),
                        op: Add,
                        rhs: Id<Expr>(1),
                    },
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
