pom-parser/src/snapshots/call-5.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f(55)(47);\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(4),
                    ),
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 2,
                        end: 4,
                    },
                },
                Expr {
                    kind: Call {
                        callable: Id<Expr>(0),
                        args: [
                            Id<Expr>(1),
                        ],
                    },
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Call {
                        callable: Id<Expr>(2),
                        args: [
                            Id<Expr>(3),
                        ],
                    },
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
