pom-parser/src/snapshots/empty.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"\")"
---
(
    Ast {
        items: [],
        stmts: Arena(
            [],
        ),
        exprs: Arena(
            [],
        ),
    },
    Arena(
        [],
    ),
)
