pom-parser/src/snapshots/invalid_block_stmt.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"{55 + 47;;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(2),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(2),
                    ),
                    span: Span {
                        start: 1,
                        end: 9,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 9,
                        end: 10,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(0),
                        op: Add,
                        rhs: Id<Expr>(1),
                    },
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 9,
                        end: 10,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 9,
                            end: 10,
                        },
                    },
                },
                span: Span {
                    start: 8,
                    end: 9,
                },
            },
            Error {
                kind: UnbalancedBlock,
                span: Span {
                    start: 0,
                    end: 10,
                },
            },
        ],
    ),
)
