pom-parser/src/snapshots/invalid_paren-3.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"(55 + 47\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 0,
                        end: 8,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(0),
                        op: Add,
                        rhs: Id<Expr>(1),
                    },
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
                Expr {
                    kind: Paren(
                        Id<Expr>(2),
                    ),
                    span: Span {
                        start: 0,
                        end: 8,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        RParen,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ],
    ),
)
