pom-parser/src/snapshots/invalid_paren-4.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"(;);\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Expr {
                    kind: Paren(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 1,
                            end: 2,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
    ),
)
