pom-parser/src/snapshots/paren-3.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"();\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Tuple(
                        [],
                    ),
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
